[gd_scene load_steps=7 format=3 uid="uid://cfq3raqmnotti"]

[ext_resource type="Script" uid="uid://cidte76uiosqq" path="res://Scenes/GameUi/CraftBook/CraftBook.gd" id="1_8uncr"]
[ext_resource type="Texture2D" uid="uid://bjgfrgm4lb76s" path="res://Assets/Sprites/6 UI/Sprites/UI_Flat_FrameSlot01b.png" id="1_drcv8"]
[ext_resource type="Texture2D" uid="uid://cwa3ep53v2mor" path="res://Assets/Sprites/2 Objects/Sword1.png" id="2_8uncr"]
[ext_resource type="Texture2D" uid="uid://3m8mn5vrpikv" path="res://Assets/Sprites/6 UI/Sprites/UI_Flat_FrameSlot01a.png" id="2_vdn5p"]
[ext_resource type="Texture2D" uid="uid://mxtpplmu4skn" path="res://Assets/Sprites/2 Objects/Axe.png" id="3_vdn5p"]
[ext_resource type="Texture2D" uid="uid://cjugm0xk1pdw5" path="res://Assets/Sprites/2 Objects/Spear.png" id="4_17dol"]

[node name="CraftBook" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8uncr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SwordButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_vdn5p")
texture_pressed = ExtResource("1_drcv8")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/SwordButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_8uncr")
stretch_mode = 3

[node name="AxeButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_vdn5p")
texture_pressed = ExtResource("1_drcv8")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/AxeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_vdn5p")
stretch_mode = 3

[node name="SpearButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_vdn5p")
texture_pressed = ExtResource("1_drcv8")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/SpearButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_17dol")
stretch_mode = 3

[connection signal="pressed" from="HBoxContainer/SwordButton" to="." method="_on_sword_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AxeButton" to="." method="_on_axe_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SpearButton" to="." method="_on_spear_button_pressed"]
